# RtApi

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Readme.md  container.sh  index.html  to-do
Doc/: fluxcd.md  helm.md  kubernetes.md  kustomize.md  template.tex
cgmath/include/: mat3.h  mat4.h  utils.h  vec2.h  vec3.h  vec4.h
cgmath/src/: utils.cc
config/cron/: crontask
dockerfiles/: .env  Dockerfile  Dockerfile.dev  affine.yml  anon.dockerfile  anon.yml  container.sh  dev-compose.yml  example-compose.yml  interface.dockerfile  interface.env  iobroker-compose.yml  nodered-compose.yml  osc-compose.yml  portainer-compose.yml  start_interface.sh  tmplt-compose.yml  yacht-compose.yml
dockerfiles/compare-test-scenario/: test-compose.yml
elka/firstdraft/: main.tex  prefase.tex
env-restapi/: app.py  example  run.sh  user-compose.yml
env-restapi/static/: utils.js
gis-dashboard/: .env  Dockerfile  Readme.md
gis-dashboard/dashboardrs/: Cargo.toml  compiler.err
gis-dashboard/giswebui/: Cargo.toml
gis-dashboard/scripts/: buildimg.sh  run.sh
glpg/: Cargo.toml
glpg/src/: life.wgsl  main.rs
include/: Binding.h  ExampleClass.h  Graphics.h  IniParser.h  Oscillator.h  TetraSand.h  Time.h  ifile.h  linalg.h  openglsdlweb.h
jshtmlobj/: index.html  main.js  nau.mtl
litegraph-stal/: utils.js
npl-text-model/: generateTextWithModel.py  getcodelang.py  main.py  model.py  textgenRNN.py  waitModel2poweroff.py
scripts/: adapt-compose.py  createCsClass.py  createMockClass.py  create_ccinterface.py  create_cfunctions.py  create_embind.py  create_interface.py  create_interfacec.py  create_metatable.py  create_tree.py  create_tree3.py  cron_setup.sh  merge-compose.py  npm-bundle.sh  run_script_dir.sh  set.sh  testcron.sh  udp-client.py  wasm-build.sh
shaders/: grid.vert  mandelbrot.wgsl  rt.frag  rt.vert  simple.wgsl  solid.vert  solid_color.frag  sphere copy.vert  sphere.vert  sphere.wgsl
sinegen/: Cargo.toml  postConfig.sh  sinecfg.json  sinecfg.toml
sinegen/src/: main.rs  new
src/: main.cc  main.cc.old2  osc_pub.cc  triangle_glbook.cc  udp_mc.cc
templates/: Interface.h  emcBind.h  emcFunctions.h
terrahedron/: Cargo.toml  index.js
terrahedron/scripts/: build-webpack-dist.sh
terrahedron/src/: core.rs  lib.rs  (+4 more)
test-interface/: todo
udprecv/: Cargo.toml
videoanim/: main.py
webscrapper/: main.py  searchlist.txt
(+34 files in other folders)
