[package]
name = "sinegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.1.11", features = ["derive"] }
serde = { version = "1.0.157", features = ["derive"] }
