[package]
name = "sinegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.1.11", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.157", features = ["derive"] }
rocket_codegen = "0.5.0-rc.1"
serde_derive = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
